compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__label_shorthand_action_works_on_labelled_update_call_args.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(r#\"pub fn main() {\n    let arg1 = 1\n    Wibble(..todo, arg1: arg1)\n}\n\npub type Wibble { Wibble(arg1: Int, arg2: Int) }\n\"#,\n    2, USE_LABEL_SHORTHAND_SYNTAX)"
---
pub fn main() {
    let arg1 = 1
    Wibble(..todo, arg1: )
}

pub type Wibble { Wibble(arg1: Int, arg2: Int) }
