compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__merge_case_branch_with_complex_bodies_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn go(n: Int) {\n  case n {\n    1 -> n\n    2 -> n\n    _ -> panic as \"neither one nor two\"\n  }\n  }"
---
----- BEFORE ACTION
pub fn go(n: Int) {
  case n {
    1 -> n
    ▔▔▔▔▔▔
    2 -> n
▔▔▔▔↑     
    _ -> panic as "neither one nor two"
  }
  }


----- AFTER ACTION
pub fn go(n: Int) {
  case n {
    1 | 2 -> n
    _ -> panic as "neither one nor two"
  }
  }
