compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__move_imports_to_the_top_of_the_module_moves_all_imports_and_qualified_items.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(code, 5, MOVE_IMPORTS_UP)"
---
import result.{
  is_ok
}
import list

pub fn main() {}
