compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__outer_inexhaustive_let_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main(result) {\n    let [wibble] = {\n        let Ok(wobble) = {\n            result\n        }\n        [wobble]\n    }\n}"
---
----- BEFORE ACTION
pub fn main(result) {
    let [wibble] = {
    ▔▔▔▔▔▔▔▔▔▔▔↑    
        let Ok(wobble) = {
            result
        }
        [wobble]
    }
}


----- AFTER ACTION
pub fn main(result) {
    let wibble = case {
        let Ok(wobble) = {
            result
        }
        [wobble]
    } {
      [wibble] -> wibble
      [] -> todo
      [_, _, ..] -> todo
    }
}
