compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__pattern_match_on_argument_single_unlabelled_field_is_not_numbered.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(Int)\n}\n\npub fn main(arg: Wibble) {}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble(Int)
}

pub fn main(arg: Wibble) {}
               ↑           


----- AFTER ACTION

pub type Wibble {
  Wibble(Int)
}

pub fn main(arg: Wibble) {
  let Wibble(value) = arg
}
